Fix vertical centring on Safari

--- a/www/main.css
+++ b/www/main.css
@@ -1,13 +1,22 @@
 @import url('https://rsms.me/inter/inter.css');
-html { font-family: 'Inter', 'Helvetica', 'Arial', sans-serif; }
-@supports (font-variation-settings: normal) {
-	html { font-family: 'Inter var', sans-serif; }
+
+body {
+	font-family: 'Inter', 'Helvetica', 'Arial', sans-serif;
+}
+
+.wrapper {
+	padding: 15%;
 }
 
 .content {
+	position: absolute;
+	left: 50%;
+	top: 50%;
+	-webkit-transform: translate(-50%, -50%);
+	transform: translate(-50%, -50%);
+
 	max-width: 200px;
-	margin: auto;
-	padding: 15%;
+	margin: 0 auto;
 	text-align: center;
 }
 
